# sam-design-system

./: README.md  WORKSPACE  angular-tsconfig.json  build-config.js  package-lock.json  package.json  packages.bzl  rollup-globals.bzl  tsconfig.json
apps/sam-design-system-site/src/: styles.scss
apps/sam-design-system-site/src/app/: app.component.html  app.module.ts
docs-site/: README.md  angular.json  package.json
docs-site/src/: _app-theme.scss
docs-site/src/app/: app-module.ts  material-docs-app.html  material-docs-app.scss
docs-site/src/app/pages/component-page-header/: component-page-header.scss
docs-site/src/app/pages/component-sidenav/: component-sidenav.html
docs-site/src/app/pages/component-viewer/: component-api.html  component-overview.html  component-viewer.scss  component-viewer.spec.ts
docs-site/src/app/shared/documentation-items/: documentation-items.ts
docs-site/src/app/shared/example-viewer/: _example-viewer-theme.scss  example-viewer.spec.ts
docs-site/src/app/shared/stack-blitz/: stack-blitz-writer.spec.ts  stack-blitz-writer.ts
docs-site/src/styles/: _general.scss  _tables.scss
docs-site/tools/: deploy.sh
libs/component-sample/src/lib/feature/side-navigation-sample/: side-navigation-sample.component.html  side-navigation-sample.component.ts
libs/component-sample/src/lib/feature/video-player-sample/: video-player-sample.component.html  video-player-sample.component.ts  video-player-sample.module.ts
libs/sam-formly-sample/src/lib/: sam-formly-sample.module.ts
libs/sam-formly-sample/src/lib/feature/filter-align/: filter-align.component.html  filter-align.component.ts
libs/sam-formly-sample/src/lib/feature/filter-ngselect/: filter-ngselect.component.html  filter-ngselect.component.ts  filter-ngselect.module.ts
scripts/deploy/: publish-docs-content.sh
src/: BUILD.bazel  README.md
src/cdk/: BUILD.bazel
src/cdk-experimental/: BUILD.bazel
src/cdk/testing/protractor/: BUILD.bazel
src/components/: BUILD.bazel  README.md  config.bzl  index.ts  package.json  public-api.ts
src/components-examples/: BUILD.bazel  package.json  tsconfig.json
src/components-examples/components/footer/: BUILD.bazel  index.ts
src/components-examples/components/footer/footer-overview/: footer-overview-example.ts
src/components-examples/material/badge/: BUILD.bazel
src/components-examples/material/tree/: index.ts
src/components/actions-menu/: BUILD.bazel  actions-menu.component.html  actions-menu.component.ts  actions-menu.md  actions-menu.module.ts  tsconfig-build.json
src/components/core/: BUILD.bazel  public-api.ts
src/components/core/common-behaviors/: index.ts
src/components/footer/: BUILD.bazel  footer-model.ts  footer-module.ts  footer.ts  public-api.ts
src/components/menu/: BUILD.bazel  menu-header.component.html  menu-header.component.ts  menu-item.component.ts  menu-trigger.directive.ts  menu.md  menu.module.ts  public-api.ts  tsconfig-build.json
src/dev-app/: BUILD.bazel  system-config.js  tsconfig.json
src/dev-app/actions-menu/: BUILD.bazel  actions-menu-demo-module.ts  actions-menu-demo.ts  actions-menu.component.ts  actions-menu.module.ts
src/dev-app/actions-menu-sample/: BUILD.bazel
src/dev-app/dev-app/: BUILD.bazel  dev-app-layout.ts  routes.ts
src/dev-app/example/: example-list.ts  example-module.ts  example.ts
src/dev-app/examples-page/: examples-page.ts
src/examples/: BUILD.bazel
src/examples/components/actions-menu/: BUILD.bazel  module.ts
src/examples/components/actions-menu/overview/: actions-menu-sample.component.ts
src/examples/formly/input/: BUILD.bazel  module.ts
src/examples/formly/input/overview/: input-overview-example.ts
src/formly/: BUILD.bazel  config.bzl  formly.config.ts  formly.module.ts  formly.validators.ts  package.json  public-api.ts  sds-formly.ts  tsconfig-build.json  tsconfig-tests.json  tsconfig.json
src/formly/core/: BUILD.bazel  tsconfig-build.json
src/formly/formly-filters/: BUILD.bazel  formly-filter.md  public-api.ts  tsconfig-build.json
src/formly/wrappers/: form-field.wrapper.ts
src/google-maps/: BUILD.bazel
src/layouts/: BUILD.bazel  package.json  public-api.ts  tsconfig-build.json  tsconfig.json
src/layouts/actions-menu/: BUILD.bazel  actions-menu.component.html  actions-menu.component.ts  actions-menu.module.ts  public-api.ts  tsconfig-build.json
src/material/: BUILD.bazel
src/material-experimental/: BUILD.bazel
src/material-moment-adapter/: BUILD.bazel
src/sds-examples/: BUILD.bazel
src/youtube-player/: BUILD.bazel
tools-sds/gulp/: gulpfile.ts  packages.ts
tools/bazel/: postinstall-patches.js
tools/dgeni/templates/: entry-point.template.html
tools/example-module/: generate-example-module.ts
tools/package-tools/: build-bundles.ts  build-config.ts  build-package.ts  build-release.ts  compile-entry-point.ts  rollup-globals.ts
tools/release/release-output/: release-packages.ts
