package(default_visibility = ["//visibility:public"])

load(
    "//src/formly:config.bzl",
    "FORMLY_PACKAGES",
    "FORMLY_TARGETS",
)
load(
    "//:packages.bzl",
    "ROLLUP_GLOBALS",
)
load("//tools:defaults.bzl", "ng_module", "ng_package")
load("//tools:sass_bundle.bzl", "sass_bundle")

# Root "@gsa-sam/formly" entry-point.
ng_module(
    name = "formly",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@gsa-sam/formly",
    deps = ["//src/formly/%s" % p for p in FORMLY_PACKAGES] + [
        "@npm//@angular/forms",
        "@npm//@angular/common",
        "@npm//@fortawesome/angular-fontawesome",
        "@npm//@ngx-formly/core",
        "@npm//@ngx-formly/core/select",
        
    ],
)

filegroup(
    name = "overviews",
    srcs = ["//src/formly/%s:overview" % name for name in FORMLY_PACKAGES],
)

# Creates the @gsa-sam/formly package published to npm.
ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    entry_point = ":public-api.ts",
    entry_point_name = "formly",
    globals = ROLLUP_GLOBALS,
    # TODO(devversion): Use the npm package for publishing. Right now this is disabled because
    # we build using AOT for serving & testing, but the `ng_package` rule should not include factory
    # files.
    tags = ["manual"],
    deps = FORMLY_TARGETS,
)
