package(default_visibility = ["//visibility:public"])

load(
    "//tools:defaults.bzl",
    "ng_module",
)

ng_module(
    name = "core",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [],
    module_name = "@gsa-sam/components/core",
    deps = [],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
