package(default_visibility = ["//visibility:public"])

load(
    "//tools:defaults.bzl",
    "markdown_to_html",
    "ng_module",
)

ng_module(
    name = "core",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [],
    module_name = "@gsa-sam/components/core",
    deps = [],
)

markdown_to_html(
    name = "overview",
    srcs = ["common-behaviors/nav.md"],
)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
