package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//tools:defaults.bzl", "ng_module")

ng_module(
    name = "actions-menu",
    srcs = glob(["**/*.ts"]),
    assets = [
        "actions-menu.component.html",
    ],
    deps = [
        "//src/components/menu",
        "//src/components/actions-menu",
        "@npm//@angular/forms",
        "@npm//@angular/router",
         "@npm//@angular/core",
        "@npm//@angular/common",
    ],
)

